--- a/src/index.html
+++ b/src/index.html
@@ -20,4 +20,5 @@
   <app-root>Loading...</app-root>
 </body>
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
 </html>
